# consistent

./: .gitignore  Cargo.toml  README.md
src/: consistant.rs  lib.rs
